Updated HTML and CSS

--- a/pages/homepage/index.html
+++ b/pages/homepage/index.html
@@ -11,11 +11,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;700&display=swap" rel="stylesheet">
     <!--Including Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--Including AOS-->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>E-Learning Skill Development And Learning Website</title>
 </head>
 <body>
     <!--Developing the nav bar-->
-    <div class="container-one">
+    <div class="container-one"data-aos="fade-down">
         <div class="links">
             <ul class="nav">
                 <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
@@ -29,20 +31,20 @@
             <button type="button" class="btn-signup">Signup</button>
         </div>
     </div>
-    <div class="container-two">
+    <div class="container-two" data-aos="fade-up">
         <div class="search-field">
             <input type="text" name="search-field" id="" placeholder="What do you want to learn today?">
         </div>
         <div class="submit-search">
-            <button><i class="fa-solid fa-magnifying-glass fa-lg" style="color: #000000;"></i></button>
+            <button><i class="fa-solid fa-magnifying-glass fa-lg" style="color: #fffffe;"></i></button>
         </div>
     </div>
-    <div class="container-three">
+    <div class="container-three" data-aos="fade-right">
         <h1 id="greeting"></h1>
         <h2 id="username">Tushar</h2>
     </div>
     <div class="container-four">
-        <div class="container-four-left">
+        <div class="container-four-left"data-aos="fade-up-right">
             <h1 class="container-right-heading">
                 Your Subjects
             </h1> <br>
@@ -50,23 +52,23 @@
                 <h3>Filter</h3>
                 <p><u><b><i class="fa-solid fa-chevron-right" style="color: #ffffff;"></i> Categories</b></u></p>
                 <ul>
-                    <li><input type="checkbox" name="" id="">Full Stack</li>
-                    <li><input type="checkbox" name="" id="">Java</li>
-                    <li><input type="checkbox" name="" id="">C</li>
-                    <li><input type="checkbox" name="" id="">C++</li>
+                    <li><input type="checkbox" name="" id="">  Full Stack</li>
+                    <li><input type="checkbox" name="" id="">  Java</li>
+                    <li><input type="checkbox" name="" id="">  C</li>
+                    <li><input type="checkbox" name="" id="">  C++</li>
                 </ul>
                 <p><u><b><i class="fa-solid fa-chevron-right" style="color: #ffffff;"></i> Prices</b></u></p>
                 <ul>
-                    <li><input type="checkbox" name="" id="">Free</li>
-                    <li><input type="checkbox" name="" id="">Paid</li>
+                    <li><input type="checkbox" name="" id="">  Free</li>
+                    <li><input type="checkbox" name="" id="">  Paid</li>
                 </ul>
             </div>
         </div>
-        <div class="containeer-four-right">
+        <div class="containeer-four-right"data-aos="fade-up-left">
             <div class="videos">
-                <h1>Video lectures</h1>
-                <iframe width="460" height="215" src="https://www.youtube.com/embed/bL-o2xBENY0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> <p><b><i>Variables and Output / Input in C++ | Lecture 3 | C++ and DSA Foundation Course</i></b></p>
-                <iframe width="460" height="215" src="https://www.youtube.com/embed/BQ5PwItzNBY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><p><b><i>Variables & Input/Output in Java | Lecture 3 | Java and DSA Foundation Course</i></b></p>
+                <h1>Video lectures</h1> <br>
+                <iframe width="360" height="215" src="https://www.youtube.com/embed/bL-o2xBENY0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> <p><b><i>Variables and Output / Input in C++ | Lecture 3 | C++ and DSA Foundation Course</i></b></p>
+                <iframe width="360" height="215" src="https://www.youtube.com/embed/BQ5PwItzNBY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><p><b><i>Variables & Input/Output in Java | Lecture 3 | Java and DSA Foundation Course</i></b></p>
                 <p id="viewmore">
                     view more..
                 </p>
@@ -86,6 +88,11 @@
             <p>Exam notes</p>
         </div>
     </footer>
+    <!--AOS SCRIPT-->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="homepage/script.js"></script>
 </body>
 </html>
