Added mongo db and a popup Login/Signup page

--- a/pages/homepage/index.html
+++ b/pages/homepage/index.html
@@ -43,6 +43,24 @@
         <h1 id="greeting"></h1>
         <h2 id="username">Tushar</h2>
     </div>
+    <div id="login-signup-popup">
+        <form action="" id="popup-form">
+            <div class="form-controls">
+                <div class="form-greet">
+                    Hello, user
+                </div>
+                <div class="close-form">
+                    <button id="closeForm">
+                        <i class="fa-solid fa-xmark fa-lg" style="color: #000000;"></i>
+                    </button>
+                </div>
+            </div>
+            <input type="text" name="" id="" placeholder="Enter your name"> <br>
+            <input type="email" name="" id="" placeholder="demo123@gmail.com"> <br>
+            <input type="password" name="" id="" placeholder="Set your password"> <br>
+            <input type="submit" value="Signup">
+        </form>
+    </div>
     <div class="container-four">
         <div class="container-four-left"data-aos="fade-up-right">
             <h1 class="container-right-heading">
