Updated Server.js (Now user in signup )

--- a/pages/homepage/index.html
+++ b/pages/homepage/index.html
@@ -55,9 +55,9 @@
                     </button>
                 </div>
             </div>
-            <input type="text" name="" id="usr" placeholder="Enter your name"> <br>
-            <input type="email" name="" id="email" placeholder="demo123@gmail.com"> <br>
-            <input type="password" name="" id="password" placeholder="Set your password"> <br>
+            <input type="text" name="user" id="usr" placeholder="Enter your name"> <br>
+            <input type="email" name="email" id="email" placeholder="demo123@gmail.com"> <br>
+            <input type="password" name="password" id="password" placeholder="Set your password"> <br>
             <input type="submit" value="Signup">
         </form>
     </div>
