Updated Homepage and Added a dedicated signup page

--- a/pages/homepage/index.html
+++ b/pages/homepage/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="auth-buttons">
             <button type="button" class="btn-login">Login</button>
-            <button type="button" class="btn-signup">Signup</button>
+            <button type="button" class="btn-signup"><a href="/Auth-Signup">Signup</a></button>
         </div>
     </div>
     <div class="container-two" data-aos="fade-up">
@@ -41,25 +41,7 @@
     </div>
     <div class="container-three" data-aos="fade-right">
         <h1 id="greeting"></h1>
-        <h2 id="username">Tushar</h2>
-    </div>
-    <div id="login-signup-popup">
-        <form action="/", method="post"id="popup-form">
-            <div class="form-controls">
-                <div class="form-greet">
-                    Hello, user
-                </div>
-                <div class="close-form">
-                    <button id="closeForm" onclick="closePopup()">
-                        <i class="fa-solid fa-xmark fa-lg" style="color: #000000;"></i>
-                    </button>
-                </div>
-            </div>
-            <input type="text" name="user" id="usr" placeholder="Enter your name"> <br>
-            <input type="email" name="email" id="email" placeholder="demo123@gmail.com"> <br>
-            <input type="password" name="password" id="password" placeholder="Set your password"> <br>
-            <input type="submit" value="Signup">
-        </form>
+        <h2 id="username"></h2>
     </div>
     <div class="container-four">
         <div class="container-four-left"data-aos="fade-up-right">
