Tried to add login(pending) minor change in signup.login

--- a/pages/homepage/index.html
+++ b/pages/homepage/index.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
         <div class="auth-buttons">
-            <button type="button" class="btn-login">Login</button>
+            <button type="button" class="btn-login"><a href="/Auth-Login">Login</a></button>
             <button type="button" class="btn-signup"><a href="/Auth-Signup">Signup</a></button>
         </div>
     </div>
