--- a/pages/signup/signup.html
+++ b/pages/signup/signup.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div id="login-signup-popup">
-        <form action="Auth-Signup", method="post"id="popup-form">
+        <form action="/Auth-Signup", method="post"id="popup-form">
             <div class="form-controls">
                 <div class="form-greet">
                     Sign Up!
